Remove consumer_consent_provided and consumer_disputed deprecated fields
